creating the services for roboshop by using ansible role playbook

--- a/inventory.ini
+++ b/inventory.ini
@@ -39,9 +39,9 @@ ansible_password=DevOps321
 
 [local:vars]
 NAME= from inventory file
-course=Ansible
-duration=10HRS
-trainer=Sivakumar reddy
+# course=Ansible
+# duration=10HRS
+# trainer=Sivakumar reddy
 
 # Here I'm defining variables in the inventory file and will use it in ansible playbook
 # To run the playbook use the command: ansible-playbook 09-vars-args.yaml -i inventory.ini --extra-vars "env=local"
