--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -4,3 +4,8 @@
     name: common
     tasks_from: app-setup.yaml
 # here i am using the import_role module to import the tasks from the common role
+
+- name: app setup
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: nodejs.yaml # calling the nodejs.yaml file from the common role to install the nodejs and its dependencies for the catalogue service.
